<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:BlueToothLeGattDemo="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_refresh"
          android:checkable="false"
          android:orderInCategory="1"
          BlueToothLeGattDemo:showAsAction="ifRoom"
          android:title=""/>

    <item android:id="@+id/menu_disconnect"
          android:title="@string/menu_disconnect"
          android:orderInCategory="100"
          BlueToothLeGattDemo:showAsAction="ifRoom|withText"/>

    <item android:id="@+id/menu_connect"
          android:title="@string/menu_connect"
          android:orderInCategory="100"
          BlueToothLeGattDemo:showAsAction="ifRoom|withText"/>

    <item android:id="@+id/menu_connecting"
          android:title="@string/menu_connecting"
          android:orderInCategory="100"
          BlueToothLeGattDemo:showAsAction="ifRoom|withText"/>
</menu>
